# text2sql

./: .gitignore  Dockerfile  README.md  configure_postgresql.sh  csv2db.sh  docker-compose.yml  pyproject.toml
text2sql/: main.py
text2sql/src/: config.py  utils.py
text2sql/src/train/: netflix.py  repairs.py  tickets.py
text2sql/train/: fs.py  netflix.py
text2sql/utils/: config.py
