[tool.poetry]
name = "text2sql"
version = "0.1.0"
description = ""
authors = ["Daria Orhunova <dorhunova@n-ix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kaleido = "0.2.1"
setuptools = "^75.1.0"
python-dotenv = "^1.0.1"
openai = "^1.47.0"
chromadb = "^0.5.7"
psycopg2 = "^2.9.9"
# vanna = {git = "https://github.com/dorhunova/vanna.git", rev = "feature/update_plots_functionality_and_front"}
vanna = { path = "/Users/dorhunova/Projects/vanna" }


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
ipdb = "^0.13.13"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
